k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-dashboard
  labels:
    app: k8s-dashboard
