k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard
  namespace: k8s-dashboard
  labels:
    app: k8s-dashboard
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      nodePort: 30081
      protocol: TCP
      name: http
  selector:
    app: k8s-dashboard
